--- a/index.html
+++ b/index.html
@@ -102,9 +102,9 @@ function makeinvisible2(){
                 </div>
                 <div class="blank"></div>
                 <div class="contact">+91 9745914832</div>  
-                <div class="buttondiv">
+                <a href="reservation.html"><div class="buttondiv">
                     <button class="rbtn">RESERVE</button>
-                </div>  
+                </div> </a> 
             </div>
             <div class="mnhd">
                 <h1 class="mnhding">The Roses of Vercors
