--- a/contact.html
+++ b/contact.html
@@ -29,10 +29,10 @@
             <a href="index.html"><img class="hl" src="./files/logoblack.svg" alt=""></a>
         </div>
         <div class="blank"></div>
-        <div class="contact">+91 9745914832</div>  
-        <div class="buttondiv">
-            <button class="rbtn">RESERVE</button>
-        </div>  
+        <div class="contact">+91 6900000069</div>  
+        <a href="reservation.html"><div class="buttondiv">
+          <button class="rbtn">RESERVE</button>
+      </div> </a>  
     </div>
 
     <DIV class="cmainctr">
@@ -44,21 +44,21 @@
         <form action="">
             <div class="formsubdiv">
                 <div class="fleft">
-                    <p class="fhd small">Name *</p>
+                    <p class="fhd small">Name <span class="requiredstar">*</span></p>
                     <input id="name" class="inpp" type="text" required placeholder="Name">
 
-                    <p class="fhd small">Email *</p>
+                    <p class="fhd small">Email <span class="requiredstar">*</span></p>
                     <input id="email" class="inpp" type="email" required placeholder="Email">
                 </div>
                 <div class="fright">
-                    <p class="fhd small">Forename *</p>
+                    <p class="fhd small">Forename <span class="requiredstar">*</span></p>
                     <input id="forename" class="inpp" type="text" required placeholder="Forename">
 
-                    <p class="fhd small">Phone *</p>
+                    <p class="fhd small">Phone <span class="requiredstar">*</span></p>
                     <input id="phone" class="inpp" type="tel" required placeholder="Phone">
                 </div>
             </div>
-            <p class="fhd big">Hosting *</p>
+            <p class="fhd big">Hosting <span class="requiredstar">*</span></p>
 
             <select required id="hosting">
               <option>HOUSE</option>
