--- a/house.html
+++ b/house.html
@@ -26,10 +26,10 @@
             <a href="index.html"><img class="hl" src="./files/logoblack.svg" alt=""></a>
         </div>
         <div class="blank"></div>
-        <div class="contact">+91 9745914832</div>  
-        <div class="buttondiv">
-            <button class="rbtn">RESERVE</button>
-        </div>  
+        <div class="contact">+91 6900000069</div>  
+        <a href="reservation.html"><div class="buttondiv">
+          <button class="rbtn">RESERVE</button>
+      </div> </a> 
     </div>
 
     <div class="hwhitediv">
