--- a/apartment.html
+++ b/apartment.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="house.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>APARTMENT</title>
 </head>
 <body>
     <div class="header house">
