--- a/apartment.html
+++ b/apartment.html
@@ -16,7 +16,7 @@
     <div class="header house">
         <div class="menus house">
             <a href="house.html"><p class="menu house">HOUSE</p> </a> 
-            <a href="apartment.html"><p class="menu house">APARTMENT</p> </a>                                                                                      </p>
+            <a href="apartment.html"><p class="menu house">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;APARTMENT</p> </a>                                                                                      </p>
             <a href="contact.html"><p class="menu house">CONTACT</p> </a>                                                                                      </p>
                                                                                                </p>
             
