--- a/contact.html
+++ b/contact.html
@@ -41,7 +41,7 @@
 
     <div class="formdiv">
         <p class="fhd big">Personal information</p>
-        <form action="https://formspree.io/f/xgvekbrj"  method="POST">
+        <form target="_blank" action="https://formspree.io/f/xgvekbrj"  method="POST">
             <div class="formsubdiv">
                 <div class="fleft">
                     <p class="fhd small">Name <span class="requiredstar">*</span></p>
