--- a/index.html
+++ b/index.html
@@ -14,7 +14,13 @@
 </head>
 
 <body>
-  <H1 id="loading" class='loading'>loading</H1>
+  <div id="loader">
+    <div id="d1"></div>
+    <div id="d2"></div>
+    <div id="d3"></div>
+    <div id="d4"></div>
+    <div id="d5"></div>
+  </div>
 
   <div id="wholecont" class="wholecont">
 
@@ -236,10 +242,10 @@
       himgp2.style.display = "none";
   }
   
-  const loading = document.getElementById("loading");
+  const loading = document.getElementById("loader");
   const wholecont = document.getElementById("wholecont");
   
-  
+  a
   window.addEventListener("load", function() {
       loading.style.display = "none";
       wholecont.style.display = "block";
